# quark

./: Makefile.am  README.md  configure.ac
examples/: operations.qk
src/: io.c  io.h  lexer.c  lexer.h  main.c
